fix spacing of event date

--- a/assets/styles/block/_cards.scss
+++ b/assets/styles/block/_cards.scss
@@ -53,7 +53,7 @@
 .card-details {
     align-content: center;
     display: grid;
-    grid-gap: var(--space-32);
+    grid-gap: var(--space-48);
     grid-template-columns: 1fr 3fr;
 }
 
